@@ -428,36 +428,35 @@
 						<onright>9000</onright>
 						<onup>8500</onup>
 						<ondown>8500</ondown>
-						<!-- RunScript(script.favourites,property=CustomFavourite1) -->
 						<!--custom widgets-->
-						<control type="button" id="8500">
+						<control type="button" id="8501">
 							<disabledcolor>55white</disabledcolor>
 							<include>SettingsButton</include>
 							<label>$LOCALIZE[31177]</label>
 							<enable>false</enable>
 						</control>
-						<control type="button" id="8501">
+						<control type="button" id="8502">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31380] #1</label>
 							<label2>[COLOR=selected]$VAR[CustomWidgetLabel1][/COLOR]</label2>
 							<onclick>SetProperty(EditCustomWidgets,widgetgroup1,SkinSettings)</onclick>
 							<onclick>ActivateWindow(1120)</onclick>
 						</control>
-						<control type="button" id="8502">
+						<control type="button" id="8503">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31380] #2</label>
 							<label2>[COLOR=selected]$VAR[CustomWidgetLabel2][/COLOR]</label2>
 							<onclick>SetProperty(EditCustomWidgets,widgetgroup2,SkinSettings)</onclick>
 							<onclick>ActivateWindow(1120)</onclick>
 						</control>
-						<control type="button" id="8503">
+						<control type="button" id="8504">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31380] #3</label>
 							<label2>[COLOR=selected]$VAR[CustomWidgetLabel3][/COLOR]</label2>
 							<onclick>SetProperty(EditCustomWidgets,widgetgroup3,SkinSettings)</onclick>
 							<onclick>ActivateWindow(1120)</onclick>
 						</control>
-						<control type="button" id="8504">
+						<control type="button" id="8505">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31380] #4</label>
 							<label2>[COLOR=selected]$VAR[CustomWidgetLabel4][/COLOR]</label2>							
@@ -465,13 +464,13 @@
 							<onclick>ActivateWindow(1120)</onclick>
 						</control>
 						<!--common widgets-->
-						<control type="button" id="8505">
+						<control type="button" id="8506">
 							<disabledcolor>55white</disabledcolor>
 							<include>SettingsButton</include>
 							<label>$LOCALIZE[31178]</label>
 							<enable>false</enable>
 						</control>
-						<control type="button" id="8506">
+						<control type="button" id="8507">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31094]</label>
 							<label2>[COLOR=selected]$VAR[QuickNavSettingsMovieName][/COLOR]</label2>
@@ -491,7 +490,7 @@
 							<onclick>SetProperty(Dialog.7.BuiltIn,Skin.SetString(QuickNavWidgetMoviesType,7))</onclick>
 							<onclick>RunScript(script.toolbox,info=selectdialog,header=$LOCALIZE[31094])</onclick>
 						</control>
-						<control type="button" id="8507">
+						<control type="button" id="8508">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31095]</label>
 							<label2>[COLOR=selected]$VAR[QuickNavSettingsTVShowName][/COLOR]</label2>
@@ -507,7 +506,7 @@
 							<onclick>SetProperty(Dialog.5.BuiltIn,Skin.SetString(QuickNavWidgetTVShowsType,5))</onclick>
 							<onclick>RunScript(script.toolbox,info=selectdialog,header=$LOCALIZE[31095])</onclick>
 						</control>
-						<control type="button" id="8508">
+						<control type="button" id="8509">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31096]</label>
 							<label2>[COLOR=selected]$VAR[QuickNavSettingsMusicName][/COLOR]</label2>
@@ -523,7 +522,7 @@
 							<onclick>SetProperty(Dialog.5.BuiltIn,Skin.SetString(QuickNavWidgetMusicType,5))</onclick>
 							<onclick>RunScript(script.toolbox,info=selectdialog,header=$LOCALIZE[31096])</onclick>
 						</control>
-						<control type="button" id="8509">
+						<control type="button" id="8510">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31288]</label>
 							<label2>[COLOR=selected]$VAR[QuickNavSettingsTuneInName][/COLOR]</label2>
@@ -536,7 +535,7 @@
 							<onclick>RunScript(script.toolbox,info=selectdialog,header=$LOCALIZE[31288])</onclick>
 							<visible>System.HasAddon(plugin.audio.tuneinradio)</visible>
 						</control>
-						<control type="button" id="8510">
+						<control type="button" id="8511">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31105] $LOCALIZE[31058]</label>
 							<label2>[COLOR=selected]$VAR[QuickNavSettingsAmazonDBName][/COLOR]</label2>
@@ -561,7 +560,7 @@
 							<onclick>RunScript(script.toolbox,info=selectdialog,header=$LOCALIZE[31052] $LOCALIZE[31058])</onclick>
 							<visible>System.HasAddon(plugin.video.amazon)</visible>
 						</control>
-						<control type="button" id="8511">
+						<control type="button" id="8512">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31106] $LOCALIZE[31058]</label>
 							<label2>[COLOR=selected]$VAR[QuickNavSettingsAmazonName][/COLOR]</label2>
@@ -601,7 +600,7 @@
 							<onclick>RunScript(script.toolbox,info=selectdialog,header=YouTube $LOCALIZE[31058])</onclick>
 							<visible>System.HasAddon(plugin.video.youtube)</visible>
 						</control>
-						<control type="button" id="8512">
+						<control type="button" id="8514">
 							<include>SettingsButton</include>
 							<label>- $LOCALIZE[31097]</label>
 							<label2>[COLOR=selected]$INFO[Skin.String(RSSVideoFeedURL)][/COLOR]</label2>
