@@ -1100,8 +1100,7 @@
 				<effect type="slide" start="0,0" end="0,35" time="350" tween="sine" easing="out" />
 			</animation>
 			<visible>!Window.IsActive(SubtitleSearch)</visible>
-			<visible>[Player.ShowInfo | Window.IsActive(VideoOSD)]</visible>
-			<!--  <visible>[Player.ShowInfo | Window.IsActive(VideoOSD)] | [Window.IsActive(FullScreenVideo) + [Player.Seeking | Player.DisplayAfterSeek | Player.Paused | Player.Forwarding | Player.Rewinding]]</visible> -->
+			<visible>[Player.ShowInfo | Window.IsActive(VideoOSD) | Player.Paused]</visible>			
 		</control>		
 	</controls>
 </window>
