@@ -23,7 +23,7 @@
 		<import addon="script.bellofredo.extrapack" version="1.1.1" />		
 		<import addon="script.favourites" version="6.0.1" />		
 	</requires>
-	<extension point="xbmc.gui.skin" defaultthemename="BelloFredo.xbt" effectslowdown="0.75" debugging="false">
+	<extension point="xbmc.gui.skin" defaultthemename="Textures.xbt" effectslowdown="0.75" debugging="false">
 	    <res width="1280" height="720" aspect="16:9" default="true" folder="720p"/>
 	</extension>
   <extension point="xbmc.addon.metadata">
